Revision history for {{$dist->name}}

{{$NEXT}}

0.04_01   2015-01-25 22:57:40 -0500
  - work around some weirdisms in windows

0.04      2015-01-23 17:15:50 -0500
  - bump version requirement for Alien::Base 0.007
    I am pretty sure this will correct a cpan testers failure that I am seeing
    in FFI::Platypus.

0.03      2015-01-21 07:30:24 -0500
  - Work-around for unthreaded OpenBSD.  Basically applied same wonky "fix" as I did to FFI::Raw:
    https://github.com/plicease/p5-FFI-Raw/commit/e223cf61f599ea7f51e5f5ff088de43028c8f506

0.02      2014-09-11 16:56:51 -0400
  - make Alien::Base a configure requires

0.01      2014-09-11 14:40:53 -0400
  - initial version