@@ -16,10 +16,10 @@ remove = base
 remove = Alien::MSYS
 
 [Prereqs]
-Alien::Base = 0.007
+Alien::Base = 0.009
 
 [Prereqs / ConfigureRequires]
-Alien::Base = 0.007
+Alien::Base = 0.009
 
 [Author::Plicease::Upload]
 cpan = 1
